fixed spacing issue for comment count

--- a/src/components/Avatar/Avatar.scss
+++ b/src/components/Avatar/Avatar.scss
@@ -11,7 +11,6 @@
     width: 2.75rem;
     overflow: hidden;
     background: $secondary-mercury;
-    display: none;
 
     //display: flex;
     @include medium {
