--- a/src/components/CommentForm/CommentForm.scss
+++ b/src/components/CommentForm/CommentForm.scss
@@ -10,8 +10,7 @@
 
   &__personal-info {
     display: flex;
-    width: 18%;
-
+    padding: 0 1rem;
     @media (min-width: 768px) {
       width: 9%;
     }
