--- a/src/components/SelectedMediaInfo/SelectedMediaInfo.scss
+++ b/src/components/SelectedMediaInfo/SelectedMediaInfo.scss
@@ -17,14 +17,14 @@
   &__info {
     display: flex;
     flex-direction: column;
-    padding: $padding * 2;
+    padding: 0 1rem;
 
     @media (min-width: 768px) {
-      padding: $padding * 3;
+      padding: 0 2rem;
     }
 
     @media (min-width: 1280px) {
-      padding: $padding * 2 0 $padding * 3 0;
+      padding: 0 1rem;
     }
     &__div {
       height: 4rem;
